--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 
 galaxy_info:
   author: robert.howley
-  description: Our lakes and streams aren't naturally occurring.
+  description: Reusing cloudformation templates is good.
 
 dependencies:
