--- a/vars/net_vars.yml
+++ b/vars/net_vars.yml
@@ -1,2 +1,12 @@
 
+# set full paths for defaults
 default_stack_policy: "{{ lobot_role_path }}/{{ default_stack_policy_filename }}"
+
+default_rendered_template_dir: "{{ lobot_role_path }}/cfn_templates"
+default_rendered_template_dirs:
+  bucket: "{{ default_rendered_template_dir }}/buckets"
+
+
+# set full paths for importable tasks
+lobot:
+  bucket: "{{ lobot_role_path }}/{{ default_rel_paths.bucket }}"
