--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,11 @@
 lobot_keep_it_quiet: false
 
 default_stack_policy_filename: files/default-stack-policy.policy
+
+default_rel_paths:
+  bucket: tasks/bucket.yml
+
+s3_event_shorthand:
+  created: s3:ObjectCreated:*
+  removed: s3:ObjectRemoved:*
+  all: s3:*
