--- a/tasks/bucket.yml
+++ b/tasks/bucket.yml
@@ -45,7 +45,7 @@
     tags: "{{ stack_tags | default({}) }}"
     template_parameters:
       S3BucketName: "{{ name }}"
-      BucketReadAccess: "{{ (principal_read_access | default([])) | join(',') }}"
+      BucketReadAccess: "{{ (principal_read_access | join(',')) | default(None) }}"
   register: bucket_stack
   no_log: "{{ lobot_keep_it_quiet }}"
 
