--- a/tasks/bucket.yml
+++ b/tasks/bucket.yml
@@ -15,7 +15,8 @@
 #       key_filter_type
 #       key_filter
 #       output_name
-#   output_prefix
+#   output_managed_policies
+#   stack_output_prefix
 
 - name: Creates directory for rendered templates
   file:
