--- a/tasks/lambda.yml
+++ b/tasks/lambda.yml
@@ -40,6 +40,7 @@
 #         statistic (accepts cloudwatch_statistic_shorthand)
 #         period
 #         evaluation_periods
+#         comparison_operator (accepts comparison_operator_shorthand)
 #         threshold
 
 
