--- a/_internal/tasks/render_template.yml
+++ b/_internal/tasks/render_template.yml
@@ -1,5 +1,5 @@
 
-- name: "lobot - internal - create directory for rendered {{ deployment_type }} templates"
+- name: "{{ lobot_stdout_prefix }} - create directory for rendered {{ deployment_type }} templates"
   file:
     path: "{{ default_rendered_template_dirs.get(deployment_type) }}"
     state: directory
@@ -7,8 +7,16 @@
     recurse: yes
   when: template_out is undefined
 
-- name: "lobot - internal - render final cloudformation template"
+- set_fact:
+    lobot_rendered_template_paths: "{{ (lobot_rendered_template_paths | default({})) |
+        combine({
+          (template_destination_key_name | default('template_destination')):
+            template_out | default(default_rendered_template_dirs.get(deployment_type) + '/' + rendered_filename)
+        })
+      }}"
+
+- name: "{{ lobot_stdout_prefix }} - render final cloudformation template"
   template:
     src: "{{ cloudformation_template }}"
-    dest: "{{ template_out | default(default_rendered_template_dirs.get(deployment_type) + '/' + rendered_filename) }}"
+    dest: "{{ lobot_rendered_template_paths[template_destination_key_name | default('template_destination')] }}"
     force: yes
