--- a/_internal/tasks/deploy_stack.yml
+++ b/_internal/tasks/deploy_stack.yml
@@ -1,5 +1,5 @@
 
-- name: "{{ lobot_stdout_prefix }} - Deploy stack {{ stack_name }}"
+- name: "Deploy stack {{ stack_name }}"
   cloudformation:
     stack_name: "{{ stack_name }}"
     state: "{{ state | default('present') }}"
@@ -9,6 +9,6 @@
     template_parameters: "{{ template_params | default({}) }}"
   register: deployed_stack
 
-- name: "{{ lobot_stdout_prefix }} - store {{ stack_name }} stack variable in "
+- name: "store {{ stack_name }} stack variable in "
   set_fact:
-    lobot_stacks: "{{ (lobot_stacks | default({})) | combine({stack_name: deployed_stack}) }}"
+    lobot_stacks: "{{ (lobot_stacks | default({})) | combine({lookup_name: deployed_stack}) }}"
