--- a/_internal/tasks/main.yml
+++ b/_internal/tasks/main.yml
@@ -1,10 +1,10 @@
 
-- name: "{{ lobot_stdout_prefix }} - make the tasks available with relative path variable"
+- name: "make the tasks available with relative path variable"
   set_fact:
     lobot_role_path: "{{ role_path }}/.."
     lobot_internal_role_path: "{{ role_path }}"
 
-- name: "{{ lobot_stdout_prefix }} - bring in shared vars"
+- name: "bring in shared vars"
   include_vars: vars/all.yml
 
 - include: tasks/render_template.yml
