--- a/_internal/tasks/render_template.yml
+++ b/_internal/tasks/render_template.yml
@@ -1,5 +1,5 @@
 
-- name: "{{ lobot_stdout_prefix }} - create directory for rendered {{ deployment_type }} templates"
+- name: "create directory for rendered {{ deployment_type }} templates"
   file:
     path: "{{ default_rendered_template_dirs.get(deployment_type) }}"
     state: directory
@@ -15,7 +15,7 @@
         })
       }}"
 
-- name: "{{ lobot_stdout_prefix }} - render final cloudformation template"
+- name: "render final cloudformation template"
   template:
     src: "{{ cloudformation_template }}"
     dest: "{{ lobot_rendered_template_paths[template_destination_key_name | default('template_destination')] }}"
