--- a/_internal/vars/all.yml
+++ b/_internal/vars/all.yml
@@ -5,4 +5,5 @@ default_stack_policy: "{{ lobot_internal_role_path }}/files/default-stack-policy
 render_template_path: "{{ lobot_internal_role_path }}/tasks/render_template.yml"
 default_rendered_template_dir: "{{ lobot_role_path }}/rendered_cfn_templates"
 default_rendered_template_dirs:
+  bucket: "{{ default_rendered_template_dir }}/buckets"
   lambda_function: "{{ default_rendered_template_dir }}/lambdas"
