--- a/lambda/tasks/main.yml
+++ b/lambda/tasks/main.yml
@@ -1,5 +1,5 @@
 
-- name: "{{ lobot_stdout_prefix }} - set cloudformation and j2_env paramers"
+- name: "set cloudformation and j2_env paramers"
   set_fact:
     j2_env: "{{ {'environment_variables': (lambda_function.pop('environment_variables') or {})} }}"
     cased_template_params: "{{
@@ -7,20 +7,16 @@
           | copy_keys(exclude=['environment_variables'])
           | snake_keys_to_pascal
       }}"
+    final_stack_name: "{{ stack_name | default(lambda_function.function_name + '-stack') }}"
   no_log: "{{ lobot_keep_it_quiet }}"
 
 - include_role:
     name: lobot/_internal
   vars:
-    dynamic_render: true
     deployment_type: lambda_function
-    rendered_filename: "{{ stack_name }}-{{ function_name }}.template"
+    rendered_filename: "{{ lambda_function.function_name }}.template"
+    lookup_name: "{{ lambda_function.function_name }}"
+    stack_name: "{{ final_stack_name }}"
     cloudformation_template: cloudformation/lambda.template.j2
     template_params: "{{ cased_template_params }}"
-  no_log: "{{ lobot_keep_it_quiet }}"
-
-- name: "{{ lobot_stdout_prefix }} - store {{ stack_name }} stack variable"
-  set_fact:
-    lobot_stacks:
-      "{{ stack_output_prefix }}lambda_function": "{{ deployed_stack }}"
   no_log: "{{ lobot_keep_it_quiet }}"
