--- a/_internal/vars/all.yml
+++ b/_internal/vars/all.yml
@@ -7,3 +7,4 @@ default_rendered_template_dir: "{{ lobot_role_path }}/rendered_cfn_templates"
 default_rendered_template_dirs:
   bucket: "{{ default_rendered_template_dir }}/buckets"
   lambda_function: "{{ default_rendered_template_dir }}/lambdas"
+  queue: "{{ default_rendered_template_dir }}/queues"
